# hitori-solver

./: .gitignore  README.md  pyproject.toml  requirements.txt
hitori_solver/: __init__.py  board.py  main.py  mouse_control.py  recognition.py  screen_capture.py  solver.py
hitori_solver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_board.py  test_mouse_control.py  test_recognition.py  test_screen_capture.py  test_solver.py
